--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,14 @@
 spring.application.name=shopping-app
-
-
 server.port=8888
 
-spring.datasource.url=jdbc:mysql://localhost::3306/shopapi
+spring.datasource.url=jdbc:mysql://localhost:3306/shopapi
 spring.datasource.username=root
 spring.datasource.password=1234
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
 
-api.prefix = api/v1
+api.prefix=api/v1
